fix hardware section mobile view

--- a/allt_wms_en/css/custom.css
+++ b/allt_wms_en/css/custom.css
@@ -49,7 +49,7 @@ body {
 }
 
 .portfolio-container {
-    height: 250px;
+    height: 400px;
 }
 
 .ftco-footer {
